--- a/src/k8s-configs/employees-manifest/employees-pod.yaml
+++ b/src/k8s-configs/employees-manifest/employees-pod.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   containers:
   - name: employees
-    image: 184549016595.dkr.ecr.us-east-1.amazonaws.com/myapp:latest
+    image: 184549016595.dkr.ecr.us-east-1.amazonaws.com/app:latest
     ports:
     - containerPort: 8080
     env:
